fix: tamanho do gap das setas do carrosel

--- a/assets/css/page-home.css
+++ b/assets/css/page-home.css
@@ -557,7 +557,7 @@ p{
 .w3-display-bottommiddle {  /**botão de passar pro lado**/
     display: flex;
     justify-content: center;
-    gap: 50rem;
+    gap: 30rem;
     margin-bottom: 2rem;
 }
 
